Mantis ChangeLog

2004.xx.xx  -  0.18.2

 * Enh #1649: Replace 'Assign to Me' with 'Assign To:' and dropdown of developers.
 * Enh #3548: Support RSS for news syndication.
 * Enh #3552: Improved layout of Summary page and added 'Reporter / Resolution', 'Developer / Resolution' and 'Reporter Effectiveness' reports. (thanks to Lincoln Maskey)
 * Enh #3564: In annonymous mode, login should remember the current page.
 * Fix #3077: Inconsistency: "Assigned To" versus "Handler".
 * Fix #3118: My Account: after update of password, wrong information is given.
 * Fix #3135: Changing Print-Options does not work.
 * Fix #3440: "Allowed File Types" is case sensitive (also applies to disallowed file types).
 * Fix #3522: /news_update.php looks different from /main_page.php.
 * Fix #3537: Rewriting custom values with 0 when updating a bug.
 * Fix #3539: Simple view page shows advanced custom fields.
 * Fix #3541: link to documentation wrong.
 * Fix #3568: Monitor deleted bugs? [monitor records are not deleted on bug deletion]
 * Fix #3572: The summary_graph_imp_* pages have shortcut PHP tags.
 * Fix #3575: Missing german translation for $s_email_assigned_msg.
 * Fix #3577: Unselecting custom fields causes undesired break lines in Excel.
 * Fix #3579: in the german language file strings_german.txt $s_reset_request_msg has a little problem.
 * Languages: Updated Norwegian localisation.
 * Mantis website moved to http://www.mantisbt.org

2004.02.06  -  0.18.1

 * Sec #3137: By default, every installation has an admin account with a known login cookie value. This value is now generated at installation time.
 * Sec #3445: User see all information from all projects (if user has access to 0 projects)
 * Enh #2811: Anonymous mode issues (auto login for anonymous users + other issues).
 * Fix #2668: Proxy incorrectly presents cached output to other users.
 * Fix #3028: Mailer produces errors if there are no recipients, and use_bcc is set to ON.