@@ -3,6 +3,7 @@ Mantis ChangeLog
 2004.xx.xx  -  0.18.2
 
  * Enh #1649: Replace 'Assign to Me' with 'Assign To:' and dropdown of developers.
+ * Enh #3362: Generic email notifications.
  * Enh #3548: Support RSS for news syndication.
  * Enh #3552: Improved layout of Summary page and added 'Reporter / Resolution', 'Developer / Resolution' and 'Reporter Effectiveness' reports. (thanks to Lincoln Maskey)
  * Enh #3564: In annonymous mode, login should remember the current page.
